--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.8"
 numpy = ">=1.24.0"
-scipy = “>=1.10”
+scipy = ">=1.10"
 pyyaml = ">=5.4.1"
 "ruamel.yaml" = ">=0.15.100"
 matplotlib = ">=3.3.0"
